Closed Bug 277062 Opened 21 years ago Closed 21 years ago

crash in nsRuleNode.h:210

Categories

(Core :: Layout: Tables, defect)

x86
Linux
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: opi, Assigned: bernd_mozilla)

References

Details

(Keywords: crash, testcase)

Attachments

(4 files)

Crash result from a mangled html. #7 0x41c0aa15 in nsProfileLock::FatalSignalHandler (signo=11) at nsProfileLock.cpp:209 #8 <signal handler called> #9 nsCachedStyleData::GetStyleData (this=0xddddddfd, aSID=@0x4174c6f0) at nsRuleNode.h:210
Attached file mangled file
Severity: normal → critical
Component: Layout → Style System (CSS)
Assignee: nobody → dbaron
QA Contact: core.layout → ian
Attachment #170297 - Attachment mime type: text/plain → text/html
(gdb) frame 11 #11 0x01c141ea in BasicTableLayoutStrategy::AssignNonPctColumnWidths ( this=0x9308ff8, aMaxWidth=12408, aReflowState=@0xbff8b5d0) at /builds/trunk/mozilla/layout/tables/BasicTableLayoutStrategy.cpp:1082 1082 nsStyleCoord colStyleWidth = colFrame->GetStyleWidth(); (gdb) p *colFrame $4 = {<nsFrame> = {<nsBox> = {<nsIFrame> = {<nsISupports> = { _vptr.nsISupports = 0x0}, mRect = {x = -572662307, y = -572662307, width = -572662307, height = -572662307}, mContent = 0xdddddddd, mStyleContext = 0xdddddddd, mParent = 0xdddddddd, mNextSibling = 0xdddddddd, mState = 3722304989}, static gGotTheme = 1, static gTheme = 0x8e650a8}, <nsIFrameDebug> = {<nsISupports> = { _vptr.nsISupports = 0xdddddddd}, <No data fields>}, <No data fields>}, mColIndex = 56797, mLeftBorderWidth = 221 '\uffff', mRightBorderWidth = 221 '\uffff', mTopContBorderWidth = 221 '\uffff', mRightContBorderWidth = 221 '\uffff', mBottomContBorderWidth = 221 '\uffff', mWidths = {0, 0, -1, -1, -1, -1, -1, -1, -1, -1}} Layout getting a style context from a deleted frame doesn't make it a CSS bug.
Assignee: dbaron → nobody
Component: Style System (CSS) → Layout: Tables
QA Contact: ian → core.layout.tables
as dbaron said the colframe is gone already
Status: NEW → ASSIGNED
Assignee: nobody → bernd_mozilla
Status: ASSIGNED → NEW
Status: NEW → ASSIGNED
Attached file Testcase #2
Keywords: crash, testcase
Blocks: 278385
Attached patch patchSplinter Review
1) see symmetry with InsertRowGroups 2) if we omit the second flag we tell to insert this frame and all siblings that are not null, that means we insert already existing frames (in this case the previously existing anonymous colgroup frame. 3) before the previous patch, this code got never 2 colgroups as we did not create them in the CSSFrameConstructor (the typical one patch reveals several other problems)
and it fixes the dependent bug
Attached patch debug codeSplinter Review
debug code that I needed to find the f
Attachment #172885 - Flags: superreview?(bzbarsky)
Attachment #172885 - Flags: review?(bzbarsky)
Comment on attachment 172885 [details] [diff] [review] patch r+sr=bzbarsky
Attachment #172885 - Flags: superreview?(bzbarsky)
Attachment #172885 - Flags: superreview+
Attachment #172885 - Flags: review?(bzbarsky)
Attachment #172885 - Flags: review+
And add the testcase to the regression tests?
fix and testcases checked in
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Verified FIXED using the testcase https://bugzilla.mozilla.org/attachment.cgi?id=170330 on a Windows XP trunk 2005-02-12-05 Seamonkey build.
Status: RESOLVED → VERIFIED
layout/tables/crashtests/277062-1.html http://hg.mozilla.org/mozilla-central/rev/b0337b6287f3
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: