Insert only one column group at a time and not all following siblings, bug 277062 r/sr=bzbarsky